--- a/diary/main.html
+++ b/diary/main.html
@@ -19,7 +19,7 @@
         </h1>
         <div>
           <p class="hello">환영합니다 <strong>안양진</strong>님!</p>
-          <a href="#" class="btn-logout">로그아웃</a>
+          <a href="index.html" class="btn-logout">로그아웃</a>
         </div>
       </div>
     </header>
@@ -29,7 +29,7 @@
         <h2 class="heart">2023.02.27의 비밀일기</h2>
 
         <form>
-          <label class="a11y-hidden" for="diary-title">제목</label>
+          <label class="a11y-hidden" for="diary-title">일기 제목</label>
           <input
             class="input-style"
             id="diary-title"
@@ -38,6 +38,7 @@
             required
           />
 
+          <label class="a11y-hidden" for="diary-content">일기 내용</label>
           <textarea
             class="diary-textarea"
             placeholder="오늘의 비밀은 무엇인가요?"
