web favicon 및 링크 추가

--- a/diary/index.html
+++ b/diary/index.html
@@ -7,6 +7,35 @@
     <title>로그인 | 두근두근 비밀일기</title>
     <link rel="stylesheet" href="./style/common.css" />
     <link rel="stylesheet" href="./style/login.css" />
+
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <!-- 다이어리 바로 안에 최상단에 파비콘아이씨오 넣기 인덱스랑 같은 위치 -->
+
+    <meta name="description" content="나만의 설레는 비밀일기를 작성해보세요!" />
+
+    <link
+      rel="canonical"
+      href="https://github.com/anyangjin/diary-login-page.git"
+    />
+    <meta property="og:title" content="두근두근 비밀 일기" />
+    <meta property="og:type" content="Website" />
+    <meta
+      property="og:url"
+      content="https://github.com/anyangjin/diary-login-page.git"
+    />
+    <meta property="og:image" content="./img/meta.png" />
+    <meta
+      property="og:description"
+      content="나만의 설레는 비밀일기를 작성해보세요!"
+    />
+
+    <meta name="twitter:card" content="twitter:card" />
+    <meta name="twitter:title" content="두근두근 비밀일기" />
+    <meta
+      name="twitter:description"
+      content="나만의 설레는 비밀일기를 작성해보세요!"
+    />
+    <meta name="twitter:image" content="./img/meta.png" />
   </head>
 
   <body>
