--- a/diary/main.html
+++ b/diary/main.html
@@ -92,6 +92,16 @@
                 가지에 열락의 것이다. 그림자는 꽃이 천하를 우리 찬미를 원대하고,
                 인생을 때에, 황금시대다. 목숨을 할지니, 청춘은 용기가 말이다.
               </p>
+
+              <div class="button-group">
+                <button type="button">
+                  <img src="./img/icon-edit.svg" alt="수정" />
+                </button>
+                <span></span>
+                <button type="button">
+                  <img src="./img/icon-delete.svg" alt="삭제" />
+                </button>
+              </div>
             </article>
           </li>
           <li>
@@ -109,6 +119,15 @@
                 가지에 열락의 것이다. 그림자는 꽃이 천하를 우리 찬미를 원대하고,
                 인생을 때에, 황금시대다. 목숨을 할지니, 청춘은 용기가 말이다.
               </p>
+              <div class="button-group">
+                <button type="button">
+                  <img src="./img/icon-edit.svg" alt="수정" />
+                </button>
+                <span></span>
+                <button type="button">
+                  <img src="./img/icon-delete.svg" alt="삭제" />
+                </button>
+              </div>
             </article>
           </li>
           <li>
@@ -126,6 +145,15 @@
                 가지에 열락의 것이다. 그림자는 꽃이 천하를 우리 찬미를 원대하고,
                 인생을 때에, 황금시대다. 목숨을 할지니, 청춘은 용기가 말이다.
               </p>
+              <div class="button-group">
+                <button type="button">
+                  <img src="./img/icon-edit.svg" alt="수정" />
+                </button>
+                <span></span>
+                <button type="button">
+                  <img src="./img/icon-delete.svg" alt="삭제" />
+                </button>
+              </div>
             </article>
           </li>
           <li>
@@ -143,6 +171,15 @@
                 가지에 열락의 것이다. 그림자는 꽃이 천하를 우리 찬미를 원대하고,
                 인생을 때에, 황금시대다. 목숨을 할지니, 청춘은 용기가 말이다.
               </p>
+              <div class="button-group">
+                <button type="button">
+                  <img src="./img/icon-edit.svg" alt="수정" />
+                </button>
+                <span></span>
+                <button type="button">
+                  <img src="./img/icon-delete.svg" alt="삭제" />
+                </button>
+              </div>
             </article>
           </li>
         </ul>
